# CrowdSim

./: .gitignore  README.md
ChAOS/..git/: config  index  packed-refs
ChAOS/Assets/: building.fbx  grass.mat  terrain 1.fbx  terrain.prefab
ChAOS/Assets/Materials/: DangerMaterial.mat  ExitMaterial.mat
ChAOS/Assets/Scene/: startSc.unity
ChAOS/Assets/Scripts/: FindCorners.cs  LoadEnv.cs
ChAOS/Build_Original/ChAOS_Data/: boot.config  level0  level1  sharedassets0.assets  sharedassets1.assets
ChAOS/ChAOS_Data/: app.info  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  level1  resources.assets  sharedassets0.assets  sharedassets0.assets.resS  sharedassets1.assets  sharedassets1.assets.resS
ChAOS/Scenarios/: LargeRoomEvacuation10000.xml  RoomEvacuationTest.xml  UTownGreenEvacuationPerfTest.xml  UTownGreenEvacuationTest.xml
ChAOS/Scenarios/Decor/: obstEmpty.xml  obstRoomEvacuationTest.xml
ChAOS/Scenarios/LargeRoomEvacuation10000/: output_0.csv  output_1.csv  output_10.csv  output_100.csv  output_1000.csv  output_1001.csv  output_1002.csv  output_1003.csv  output_1004.csv  output_1005.csv  output_1006.csv  output_1007.csv  output_1008.csv  output_1009.csv  output_101.csv  output_1010.csv  output_1011.csv  output_1012.csv  output_1013.csv  output_1014.csv  output_1015.csv  output_1016.csv  output_1017.csv  output_1018.csv  output_1019.csv  output_102.csv  output_1020.csv  output_1021.csv  output_1022.csv  output_1023.csv  output_1024.csv  output_1025.csv  output_1026.csv  output_1027.csv  output_1028.csv  output_1029.csv  output_103.csv  output_1030.csv  output_1031.csv  output_1032.csv  (+9960 more)
ChAOS/Scenarios/RoomEvacuationTest/: output_0.csv  output_1.csv  output_10.csv  output_100.csv  output_101.csv  output_102.csv  output_103.csv  output_104.csv  output_105.csv  output_106.csv  output_107.csv  output_108.csv  output_109.csv  output_11.csv  output_110.csv  output_111.csv  output_112.csv  output_113.csv  output_114.csv  output_115.csv  output_116.csv  output_117.csv  output_118.csv  output_119.csv  output_12.csv  output_120.csv  output_121.csv  output_122.csv  output_123.csv  output_124.csv  output_125.csv  output_126.csv  output_127.csv  output_128.csv  output_129.csv  output_13.csv  output_130.csv  output_131.csv  output_132.csv  output_133.csv  (+360 more)
ChAOS/Scenarios/UTownGreenEvacuationPerfTest/: output_0.csv  output_1.csv  output_10.csv  output_100.csv  output_1000.csv  output_1001.csv  output_1002.csv  output_1003.csv  output_1004.csv  output_1005.csv  output_1006.csv  output_1007.csv  output_1008.csv  output_1009.csv  output_101.csv  output_1010.csv  output_1011.csv  output_1012.csv  output_1013.csv  output_1014.csv  output_1015.csv  output_1016.csv  output_1017.csv  output_1018.csv  output_1019.csv  output_102.csv  output_1020.csv  output_1021.csv  output_1022.csv  output_1023.csv  output_1024.csv  output_1025.csv  output_1026.csv  output_1027.csv  output_1028.csv  output_1029.csv  output_103.csv  output_1030.csv  (+2962 more)
Scripts/: AgentToolkit.py  EnvironmentToolkit.py  RoomTwoExit1600.xml  UMANS-ChAOS_parse_trajectories.py  corridor.py  downtown.py  room_wall.py  umans_pop_crossing.py  umans_pop_large_room.py  umans_pop_room.py  umans_pop_utown.py  umans_pop_utown_large.py  umans_pop_utown_v2.py  utown.py
UMANS/: CMakeLists.txt  README.md
UMANS/..git/: config  index  packed-refs
UMANS/src/include/: CMakeLists.txt  version.h.in
visibility-based-marching/: profiling instructions.txt
visibility-based-marching/config/: settings.config
visibility-based-marching/src/: main.cpp  solver.cpp
(+3138 files in other folders)
